added payment for stemcell
