# api/controllers/authorizenet/authorizeNetController.js
@@ -2,12 +2,12 @@ import { get as _get } from 'lodash';
 import * as baseCtrl from '../../../private/base-controller';
 import { validateDataBySchema } from '../../../private/joi-validatation-wrapper';
 import { makePaymentFromAcceptMethodSchema } from './authorizeNetControllerSchema';
-import { authorizeNetHandler } from '../../handlers/payments/paymentsHandler';
+import { authorizeNetHandler, authorizeNetHelperWithoutCompanyId } from '../../handlers/payments/paymentsHandler';
 
 const makePaymentFromAcceptMethod = (req, res, next) => {
     const { body, payload } = req;
     const userCompanyId = _get(payload, 'userCompanyId');
-    baseCtrl.postAsync(res, next, async (_) => {
+    baseCtrl.postAsync(res, next, async () => {
         await validateDataBySchema(body, makePaymentFromAcceptMethodSchema);
         const paymentData = await authorizeNetHandler({
             data: body,
@@ -15,11 +15,22 @@ const makePaymentFromAcceptMethod = (req, res, next) => {
             headers: req.customHeaders,
         });
         const result = { content: paymentData };
-        debugger;
         return result;
     });
 };
 
-export {
-    makePaymentFromAcceptMethod,
+const makePaymentFromAcceptMethodWithoutCompanyId = (req, res, next) => {
+    const { body } = req;
+    baseCtrl.postAsync(res, next, async () => {
+        await validateDataBySchema(body, makePaymentFromAcceptMethodSchema);
+        const paymentData = await authorizeNetHelperWithoutCompanyId({
+            data: body,
+            headers: req.customHeaders,
+        });
+        const result = { content: paymentData };
+        return result;
+    });
 };
+
+export default makePaymentFromAcceptMethod;
+export { makePaymentFromAcceptMethod, makePaymentFromAcceptMethodWithoutCompanyId };
