# api/swagger/swagger-base.yaml
@@ -50,6 +50,33 @@ paths:
           description: Error
           schema:
             $ref: "#/definitions/ErrorResponse"
+  /payments/stemcells/authorizenet:
+    # binds a127 app logic to a route
+    x-swagger-router-controller: authorizeNetController
+    post:
+      tags:
+        - Payments
+      description: Make payments from authorize.net provider
+      # used as the method name of the controller
+      operationId: makePaymentFromAcceptMethodWithoutCompanyId
+      parameters: 
+        - name: data
+          in: body
+          description: request body for accept method
+          required: true
+          schema:
+            $ref: '#/definitions/AcceptMethodRequestBody'
+      responses:
+        "200":
+          description: Success
+        # responses may fall through to errors
+          schema:
+            # a pointer to a definition
+            $ref: "#/definitions/SuccessResponse"
+        default:
+          description: Error
+          schema:
+            $ref: "#/definitions/ErrorResponse"
 
   /swagger:
     x-swagger-pipe: swagger_raw
